--- a/README.org
+++ b/README.org
@@ -1,5 +1,5 @@
 * Construction site SonVis
-
+[[./const_sonvis.png]]
 ** Dependencies
 + SuperCollider (sclang has to be in $PATH or to be an alias).  Alternatively you can hard-code the path in the [[../src/interface.py]] line 320 e.g.
 #+BEGIN_SRC
